--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -52,5 +52,9 @@
             android:icon="@drawable/ic_audio_recorder_icon"
             android:title="@string/nav_audio_record"/>
 
+        <item
+            android:id="@+id/nav_pic"
+            android:icon="@drawable/ic_pic"
+            android:title="@string/nav_pic"/>
     </group>
 </menu>
